--- a/src/container/pages/BlogPost/BlogPost.css
+++ b/src/container/pages/BlogPost/BlogPost.css
@@ -5,6 +5,8 @@
     color: rgb(61, 137, 224);
 }
 
+
+
 .post {
     display: flex;
     border: 1px solid rgb(31, 26, 21);
@@ -64,7 +66,7 @@
     margin-top: 10px ;
 }
 
-.remove:hover, .update:hover {
+.remove:hover, .update:hover ,.content p.title:hover{
     cursor: pointer;
 }
 
